feat: make better switch for hasLineage check